method for taking only specific chunks is added

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,13 +5,14 @@
    "metadata": {},
    "source": [
     "### создание графов\n",
-    "- открывать chunks строго по порядку увеличения цифры в имени .job файла (chunk_0, chunk_1 и тд), это для того чтобы даже при появлении ошибки можно было восстановить создание графов именно с этого chunk \n",
-    "- если занимает слишком много места, сожми с joblib\n",
+    "- **python3 не желает выкачивать многие _jbl_ (заменить на python2)**\n",
+    "- **сделать имена уникальными** \n",
+    "\n",
+    "\n",
+    "- если занимает слишком много места, сожми с _rar/joblib_\n",
     "\n",
     "### создание embeddings\n",
-    "- сначала попробуем для случая, когда не меняем совпавшие полные имена файлов, затем будем добавлять определенный символ к одному из уникальных имен для каждой пары\n",
-    "- может быть проблема с тем, что в .gexf файлах у объектов __*node*__ нет объектов __*attvalues*__\n",
-    "- поставить как-то *pygraphiz*"
+    "- empty"
    ]
   },
   {
@@ -29,7 +30,8 @@
     "import matplotlib.colors as colors\n",
     "from scipy.stats import norm\n",
     "import time\n",
-    "import ast"
+    "import ast\n",
+    "from random import shuffle"
    ]
   },
   {
@@ -48,6 +50,105 @@
     "            G.add_node(key, label=dic[key])\n",
     "            G.add_edge(root, key)\n",
     "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downloading and creating 60 gexfs is 11.84 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "\n",
+    "# chunks_path = 'C:/Users/pogorelov_g/Desktop/dataset_arsenii/data/'\n",
+    "chunks_path = '/Users/grigoriipogorelov/Desktop/KL/data/'\n",
+    "path_to_save = '/Users/grigoriipogorelov/Desktop/KL/gexf_graphs/'\n",
+    "# path_to_save = 'C:/Users/pogorelov_g/Desktop/work/gexf_graphs/'\n",
+    "\n",
+    "num_chunks_to_read = 60\n",
+    "\n",
+    "# files = []\n",
+    "# for filename in os.listdir(chunks_path):\n",
+    "#     files.append(filename)\n",
+    "# shuffle(files)\n",
+    "# files = files[:num_chunks_to_read]\n",
+    "# print(files)\n",
+    "\n",
+    "failed_jbls = {}\n",
+    "count_jbl = 0\n",
+    "for file in files:\n",
+    "    try:\n",
+    "        chunk = joblib.load(chunks_path + file)\n",
+    "        for i, item in enumerate(chunk):\n",
+    "            G = nx.Graph()\n",
+    "            G.add_node('APK_ROOT', label='APK_ROOT')\n",
+    "            G = create_nodes_and_edges(G, item[1], 'APK_ROOT')\n",
+    "            nx.write_gexf(G, path_to_save + item[0] + '.gexf')\n",
+    "        count_jbl += 1\n",
+    "        if count_jbl % int(num_chunks_to_read/10) == 0:\n",
+    "            print('[%d] chunks are read' % count_jbl, end=\"\\r\")\n",
+    "    except (UnicodeDecodeError, ValueError, EOFError) as e:\n",
+    "#         print('%s jbl failed, error - %s' % (file, e), end=\"\\r\")\n",
+    "        failed_jbls[file] = e\n",
+    "        print('in total %d failed jbls' % len(failed_jbls), end=\"\\r\")\n",
+    "\n",
+    "end = time.time()\n",
+    "    \n",
+    "print('downloading and creating %d gexfs is %0.2f min' % (num_chunks_to_read, (end - start)/60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chunk_113.jbl', 'chunk_292.jbl', 'chunk_163.jbl', 'chunk_135.jbl', 'chunk_706.jbl', 'chunk_667.jbl', 'chunk_468.jbl', 'chunk_178.jbl', 'chunk_175.jbl', 'chunk_474.jbl', 'chunk_48.jbl', 'chunk_547.jbl', 'chunk_695.jbl', 'chunk_604.jbl', 'chunk_54.jbl', 'chunk_685.jbl', 'chunk_212.jbl', 'chunk_805.jbl', 'chunk_473.jbl', 'chunk_864.jbl', 'chunk_594.jbl', 'chunk_413.jbl', 'chunk_711.jbl', 'chunk_276.jbl', 'chunk_658.jbl', 'chunk_484.jbl', 'chunk_752.jbl', 'chunk_959.jbl', 'chunk_155.jbl', 'chunk_532.jbl', 'chunk_78.jbl', 'chunk_289.jbl', 'chunk_179.jbl', 'chunk_171.jbl', 'chunk_20.jbl', 'chunk_562.jbl', 'chunk_774.jbl', 'chunk_934.jbl', 'chunk_270.jbl', 'chunk_759.jbl', 'chunk_632.jbl', 'chunk_415.jbl', 'chunk_304.jbl', 'chunk_694.jbl', 'chunk_122.jbl', 'chunk_851.jbl', 'chunk_650.jbl', 'chunk_47.jbl', 'chunk_616.jbl', 'chunk_704.jbl', 'chunk_52.jbl', 'chunk_785.jbl', 'chunk_700.jbl', 'chunk_729.jbl', 'chunk_173.jbl', 'chunk_398.jbl', 'chunk_671.jbl', 'chunk_801.jbl', 'chunk_206.jbl', 'chunk_181.jbl']\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = []\n",
+    "for filename in os.listdir(chunks_path):\n",
+    "    files.append(filename)\n",
+    "shuffle(files)\n",
+    "files = [x for x in files if x not in failed_jbls]\n",
+    "files = files[:num_chunks_to_read]\n",
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading....\r"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "for x in range(5):  \n",
+    "    b = \"Loading\" + \".\" * x\n",
+    "    print (b, end=\"\\r\")\n",
+    "    time.sleep(1)"
    ]
   },
   {
@@ -72,67 +173,6 @@
     "embeddings_str = open(path_to_embeddings, 'r').read()\n",
     "embeddings_dict = ast.literal_eval(embeddings_str)\n",
     "type(whip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working in folder 0\n",
-      "downloading and creating gexfs is 2.27 min\n"
-     ]
-    }
-   ],
-   "source": [
-    "start = time.time()\n",
-    "\n",
-    "# chunks_path = 'C:/Users/pogorelov_g/Desktop/dataset_arsenii/data/'\n",
-    "# chunks_path = 'C:/Users/Grigorii/Desktop/chunks/'\n",
-    "chunks_path = '/Users/grigoriipogorelov/Desktop/KL/chunks/'\n",
-    "# path_to_save = 'C:/Users/Grigorii/Desktop/gexf_graphs/'\n",
-    "path_to_save = '/Users/grigoriipogorelov/Desktop/KL/gexf_graphs/'\n",
-    "# path_to_save = 'C:/Users/pogorelov_g/Desktop/work/gexf_graphs/'\n",
-    "\n",
-    "num_folders = 1\n",
-    "num_chunks_in_folder = 10\n",
-    "\n",
-    "for i in range(num_folders):\n",
-    "    directory = path_to_save + str(i)\n",
-    "    os.makedirs(directory)\n",
-    "\n",
-    "count_jbl = 0\n",
-    "folder_ind = -1 # because (0 % n) is always 0\n",
-    "for filename in os.listdir(chunks_path):\n",
-    "    if filename.endswith(\".jbl\"):\n",
-    "        try:\n",
-    "            chunks = joblib.load(chunks_path + filename)\n",
-    "            if count_jbl % num_chunks_in_folder == 0:\n",
-    "                folder_ind += 1\n",
-    "                print('working in folder %d\\n' % folder_ind, end='')\n",
-    "            for i, item in enumerate(chunks):\n",
-    "                G = nx.Graph()\n",
-    "                G.add_node('APK_ROOT', label='APK_ROOT')\n",
-    "                G = create_nodes_and_edges(G, item[1], 'APK_ROOT')\n",
-    "                nx.write_gexf(G, path_to_save + str(folder_ind) + '/' + item[0] + '.gexf')\n",
-    "            count_jbl += 1\n",
-    "        except (UnicodeDecodeError, ValueError, EOFError):\n",
-    "            pass\n",
-    "\n",
-    "end = time.time()\n",
-    "    \n",
-    "print('downloading and creating gexfs is {0:.2f} min'.format((end - start)/60))"
    ]
   },
   {
