--- a/gexf_and_labels_creation.ipynb
+++ b/gexf_and_labels_creation.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## gexf graphs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +19,16 @@
     "import networkx as nx\n",
     "import time\n",
     "import ast\n",
-    "from random import shuffle"
+    "from random import shuffle\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def count_non_unique_names(dic, non_uniques={}):\n",
@@ -71,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chunks_path = '/home/pogorelov/data/'\n",
@@ -119,27 +131,140 @@
     "print()\n",
     "\n",
     "_,_,files = os.walk(path_to_save).next()\n",
-    "print('%d files in ' + path_to_save, % len(files))"
+    "print('%d files in ' + path_to_save % len(files))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_clean = '/Users/grigoriipogorelov/Desktop/KL/v7/clean_g.csv'\n",
+    "path_to_malw = '/Users/grigoriipogorelov/Desktop/KL/v7/malw_g.csv'\n",
+    "path_to_pua = '/Users/grigoriipogorelov/Desktop/KL/v7/pua_g.csv'\n",
+    "\n",
+    "clean_g = pd.read_csv(path_to_clean)\n",
+    "malw_g = pd.read_csv(path_to_malw)\n",
+    "pua_g = pd.read_csv(path_to_pua)\n",
+    "\n",
+    "clean_g_list = clean_g.iloc[:,-1].tolist()\n",
+    "malw_g_list = malw_g.iloc[:,-1].tolist()\n",
+    "pua_g_list = pua_g.iloc[:,-1].tolist()\n",
+    "\n",
+    "len(clean_g_list), len(malw_g_list), len(pua_g_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "del clean_g\n",
+    "del malw_g\n",
+    "del pua_g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_gexf = '/Users/grigoriipogorelov/Desktop/KL/gexf_graphs/'\n",
+    "path_to_labels_file = '/Users/grigoriipogorelov/Desktop/KL/labels.Labels'\n",
+    "\n",
+    "_,_,files = os.walk(path_to_gexf).next()\n",
+    "\n",
+    "with open(path_to_labels_file, 'w') as f:\n",
+    "    for file_ in files:\n",
+    "        clean, malw, pua = False, False, False\n",
+    "        count +=1\n",
+    "        spl = file_.split('.')\n",
+    "        name = spl[0]\n",
+    "        if name in clean_g_list:\n",
+    "            clean = True\n",
+    "        if name in malw_g_list:\n",
+    "            malw = True\n",
+    "        if name in pua_g_list:\n",
+    "            pua = True\n",
+    "            \n",
+    "        if clean and pua:\n",
+    "            f.write(file_+' '+'2'+'\\n')\n",
+    "            continue\n",
+    "        if malw and pua:\n",
+    "            f.write(file_+' '+'1'+'\\n')\n",
+    "            continue\n",
+    "        if clean:\n",
+    "            f.write(file_+' '+'0'+'\\n')\n",
+    "        if malw:\n",
+    "            f.write(file_+' '+'1'+'\\n')\n",
+    "        if pua:\n",
+    "            f.write(file_+' '+'2'+'\\n')\n",
+    "\n",
+    "len(missed), len(files), count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check=[]\n",
+    "# with open('/Users/grigoriipogorelov/Desktop/KL/labels.Labels') as f:\n",
+    "#     check = f.readlines()\n",
+    "# check = [x.strip() for x in check]\n",
+    "# len(check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('/Users/grigoriipogorelov/Desktop/KL/clean_g.txt') as f:\n",
+    "#     clean_g_list = f.readlines()\n",
+    "# clean_g_list = [x.strip() for x in clean_g_list]\n",
+    "\n",
+    "# with open('/Users/grigoriipogorelov/Desktop/KL/malw_g.txt') as f:\n",
+    "#     malw_g_list = f.readlines()\n",
+    "# malw_g_list = [x.strip() for x in malw_g_list]\n",
+    "\n",
+    "# with open('/Users/grigoriipogorelov/Desktop/KL/pua_g.txt') as f:\n",
+    "#     pua_g_list = f.readlines()\n",
+    "# pua_g_list = [x.strip() for x in pua_g_list]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "KL_graph_embeddings__graph2vec",
+   "display_name": "py27_learning_embeddings",
    "language": "python",
-   "name": "kl_graph_embeddings__graph2vec"
+   "name": "py27_learning_embeddings"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
